# sos-laundry

./: .gitignore  Makefile  README.md  main_master.c  main_slave.c  todo.md
bluetooth/: CMakeLists.txt  Makefile  compile_commands.json  main.c  ring_buffer.c  ring_buffer.h  setup.sh  uart_utils.c  uart_utils.h
bluetooth/.cache/clangd/index/: main.c.FA23917EB9A489C4.idx
bluetooth/setup_hc/: setup_hc.ino
light_ws2812/: Makefile
tests/inter-com/: Makefile  main_master.c  main_slave.c
tests/leds/: Makefile  main.c
tests/pull-up/: Makefile  main.c
tests/ring_buffer/: Makefile  test_rb.c
